static/style.css
/* 
COLOR PALETTE
Smoky black - #14110F
Jet - #34312D
Gray - #7E7F83
Dun - #D9C5B2
Anti-flash White - #F3F3F4
*/

:root {
  --bg-color: #c2c2c2;
  --input-color: #111;
  --text-color: #14110F;
  --navbar-color: #ffffff;
  --content-background-color:#ffffff;
  --addcoursebutton: #ffffff;
  --grouping-color:#bfbfbf;
  --subgrouping-color:#d8d8d8;
  --export-button:#4b4848;
}

body {
  background: var(--bg-color);
  color: var(--text-color);
}

body.dark-mode {
  --bg-color: #282b30;
  --input-color: #f3f3f4;
  --text-color: #F3F3F4;
  --navbar-color: #1e2124;
  --content-background-color: #36393e;
  --grouping-color:#6f6f6f;
  --subgrouping-color:#494949;
  background: var(--bg-color);
  color: var(--text-color);
}
.dark-mode {
  --bg-color: #282b30;
  --input-color: #f3f3f4;
  --text-color: #F3F3F4;
  --navbar-color: #1e2124;
  --content-background-color: #36393e;
  --addcoursebutton: #424549;
}


h1{
  color: #14110F;
  font-family: 'Courier New', Courier, monospace;
  font-weight: 900;
  text-align: center;
}

h3{
  text-align: center;
}


#landingPage{
  background-image:url("../static/img/MMUcampus.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  overflow: hidden;
  height: 100%;
  width: 100%;
}

.tooltiptext {
  visibility: hidden;
  z-index:1;
  font-size: 100px;;
}

.tooltiptext:hover{
  visibility: visible;
  background-color: #f5f5f5
}

/* li{
  list-style-type: none;
  padding-top: 20px;
  padding-bottom: 20px;
  background-color: rgb(143, 145, 222);
  border-radius: 10%;
  width: fit-content;
  margin: 2vh;
  width:80%;
  padding-bottom: 20px;
  margin-bottom: 2px;
  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
  font-size: small;
} */

.navbarDark{
  background-color: var(--navbar-color);
  color: var(--text-color);
}
#navButton{
  border-radius: 8px;
  width: auto;
  height: 5vh;
  border: 10px;
  font-family: 'Courier New', Courier, monospace;
  font-weight: 900;
  font-size: 10px;
  cursor: pointer;
  transition-duration: 0.5s;
  margin-right: 10px;
}
.nav-text{
  color: var(--text-color);
}

#navButton:hover{
  background-color: rgb(51, 82, 255);
}

/*Only for Login.html*/
#loginForm{
  background-color: #F3F3F4;
  border-radius: 10px;
  justify-content: center;
  align-items: center;
  padding: 50px;
  text-align: center;
  margin: auto;
  overflow: hidden;
  min-height: fit-content;
  min-width: fit-content;
}


#loginbtn{
  margin-top: 5%;
  background-color: #B6B6B6;
  padding: 2%;
  border-color: transparent;
  border-radius: 5px;
  transition: background-color 0.3s ease, transform 0.3s ease;
}


#loginbtn:hover{
  background-color: #616161;
  color: white;
  transition: 0.5s;
}



.button_text {
  color: black;
  letter-spacing: 0.075em;
  font-size: 1.3em;
  transition: 0.1s ease-in-out;
  display: flex;
  justify-content: center;
  align-items: center;
  margin: auto;
  font-weight: 600;
}


#loginImg{
  align-content: center;
  width: 100%;
  height: 100%;
}
#loginImg img{
  align-content: center;
}

/* #navbar{ 
  background-color: #dee2e6;
  position: fixed;
  height: 10%;
  text-align: center;
  z-index: 0;
  width: 100%;
  display: flex;  
  overflow: hidden;
  padding-top: 10px;
} */

/* #navbar nav{
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
} */

/* #navbar ul{
  display: flex;
  flex-direction: row;
  left: 0%;
  list-style-type: none;
  width: 100%;
  padding: 0;
} */

#title h1{
  color: #14110F;
  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
  margin: auto;
  font-size: 20px;
}

#loginName{
  background-color: #e9ecef;
  padding: 1px;
  text-align: center;
  z-index: 0;
  border-radius: 10px;
  word-wrap: break-word;
  font-weight: bold;
  font-size: 10px;
  width: 10%;
}

/*Dashboard*/
#dashboard{
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;  
  height: auto;
  margin: auto;
  border-radius: 20px;
}

#subjectName{
  margin: 3%;
  height: 40%;
  text-align: center;
  border-radius: 10px;
  display:flex;
  flex-direction: column;
  overflow-x: hidden;
  width: 20vw;
}

#subjectName button{
  /* margin-top: 5%;
  margin-bottom: 5%; */
  background-color: #ffffff;
  padding: 10px 20px;
  border-radius: 10px;
  border: 1px solid #c2c2c2;
  transition-duration: 0.5s;
  color-scheme: dark;
  color: black;
}

#subjectName button:hover{
  background-color: rgb(206, 206, 206);
  color-scheme: light;
}

#contentBackground {
  justify-content: center ;
  background-color: var(--content-background-color);
  border-radius: 10px;
  margin: 5vh auto;
  width: 90vw;
  height: auto;
  min-height: 80vh;
  padding:4%;
  position: relative;
  overflow-x: hidden;
  overflow-y:auto;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}

#contentBackground h2{
  margin-left: 3%;
}

/*
TODO: ADD DESIGN TO THE FORMS
*/
#peerReviewForm{ 
  padding:1px;
  text-align: left;
  border-radius: 10px;
  justify-content: center;
  width: 100%;
  height: auto;
  margin-left: 3%;
}

#peerReviewForm h2{
  text-align: right;
  margin-left: 1%;
}

#contentBackground h2{
  text-align: left;
  margin-top: 0%;
} 


#groupingHeader{
  background-color: var(--grouping-color);
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 30px;
  display: flex;
  height: 100%;
}

#groupingHeader button{
  background-color: transparent;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 30px;
  display: flex;
  height: 100%;
  border: none;
  margin-left: 10px;
}

#exportGroupingbtn button{
  outline: transparent;
  background-color:var(--export-button);
  color: var(--text-color);
  border-radius: 15px/10px;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 10px;
  display: flex;
  height: 100%;
}

#exportGroupingbtn button:hover{
  outline: transparent;
  background-color:whitesmoke;
  color: black;
  border-radius: 15px/10px;
  padding-top: 12px;
  padding-bottom: 12px;
  font-size: 10px;
  display: flex;
  height: 100%;
  transition-duration: 0.5s;
}

#groupingTitle{
padding-left: 5%;
margin-right: 70%;
font-weight: bold;
}

#groupingSection div{
  background-color: var(--subgrouping-color);
  display:visible;/*Hides the grouping*/
  display: flex;
  font-size: 20px;
  text-align: left;
  align-items: left;
}

.studentGroupArrowbtn{
  background-color: transparent;
  width: 20px;
  height: 20px;
  display: flex;
  border: none;
  margin: 15px;
}

/* TODO: style the buttons */
.grouping{
  border: 1px solid #9f9f9f ;
  height:55px;
  width: 100%;
}

.grouping h4{
  width: fit-content;
  margin: 10px;
}

.grouping button{
  outline: transparent;
  background-color:transparent;
  border: none;
}

#changePassword{
  padding:1px;
  text-align: center;
  border-radius: 10px;
  justify-content: center;
  width: 90%;
  height: 90%;
}

/* Add Course Navigation button */
#addCoursesbtn{
  background-color: var(--addcoursebutton); 
  color: var(--text-color);
  padding:10px 20px;
  border: none;
  background-color: #2196f3;
  color: #ffffff;
  border-radius: 5px;
  transition: 0.5s;
}
#addCoursesbtn:hover{
  background-color: #0b7dda;
  transition: 0.5s;
}

.logout{
  border: 1px solid #000000;
  margin-right: 15px;
  transition: 0.5s;
}
.logout:hover{
  background-color: #f5f5f5;
  transition: 0.5s;
}

/*Only for addClassButton*/
#addClassbtn{
  background-color: rgb(147, 147, 147);
  padding:1px;
  text-align: center;
  border-radius: 10px;
  border: 2px solid #14110F;
  cursor: pointer;
}


/* Size for brand */
nav .navbar-brand
{
    font-size: xx-large;
}

.container {
        margin-left: 3;
        text-align: left;
        width: 50%;
}

.section {
    padding-bottom: 0rem;
    padding-top: 0rem;
}

.section:hover {
    background-color: #f5f5f5;
    transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
}

.button-container {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    position: relative; /* Add position: relative to the container */
  }

.interface {
  position: absolute;
  top: calc(100% + 0px); /* Adjust the top position to create a gap */
  left: 0;
  padding: 10px;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  z-index: 1;
  width: 100%;
}
.headblue{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #5D87A8;
  z-index: 1;
  width: 100%;
}
.headgreen{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #65D786;
  z-index: 1;
  width: 100%;
}
.headred{
  position: absolute;
  top: calc(100% - 1px); /* Adjust the top position to create a gap */
  left: 0;
  display: none;
  padding: 10px;
  background-color: #DB0000;
  z-index: 1;
  width: 100%;
}


body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

.backgroundgray{
  padding: 10px;
  background-color: #f5f5f5;
  border: 1px solid #ccc;
  z-index: 1;
}

.backgrounddarker{
  padding: 10px;
  background-color: #808080;
  border: 1px solid #ccc;
  z-index: 1;
}

@keyframes color-cycle {
  0% { color: red;}
  33% { color: rgb(1, 255, 39);}
  66% { color: rebeccapurple; }
  100% { color: red;}
}



/* The switch - the box around the slider */
.switch {
  font-size: 17px;
  position: relative;
  display: inline-block;
  width: 3.5em;
  height: 1.8em;
  margin-top: 0.3em;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: rgb(75, 73, 74);
  transition: 0.4s;
  border-radius: 30px;
}

.slider:before {
  position: absolute;
  content: "";
  height: 1.2em;
  width: 1.2em;
  border-radius: 20px;
  left: 0.3em;
  bottom: 0.3em;
  background-color: black;   /* this looks like night sky ig */
  box-shadow: inset 8px -4px 0 0 white;    /* crescent moon */
  transition: 0.4s;
}

.switch input:checked + .slider {
  /* turn bg into blue */
  background-color: #2196f3;
}

.switch input:checked + .slider:before {
  /* turn ball yellow */
  transform: translateX(1.5em);
  background-color: yellow;
  box-shadow: none;
} 

#microsoftLogo{
  margin: 0px 8px;
  height: 20px;
  width: 20px;
}

